[package]
name = "cdp-unix"
version = "0.1.0"
edition = "2021"
description = "High-performance Chrome DevTools Protocol bridge over Unix socket with warmup pool"

[[bin]]
name = "cdp-unix"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
os_pipe = "1"
libc = "0.2"
